@@ -1,6 +1,6 @@
-/*	$NetBSD: pfkey.c,v 1.29 2008/07/14 05:45:15 tteras Exp $	*/
+/*	$NetBSD: pfkey.c,v 1.30 2008/09/03 09:57:28 tteras Exp $	*/
 
-/* $Id: pfkey.c,v 1.29 2008/07/14 05:45:15 tteras Exp $ */
+/* $Id: pfkey.c,v 1.30 2008/09/03 09:57:28 tteras Exp $ */
 
 /*
  * Copyright (C) 1995, 1996, 1997, and 1998 WIDE Project.
@@ -270,7 +270,7 @@ pfkey_handler()
 	if ((pkrecvf[msg->sadb_msg_type])(mhp) < 0)
 		goto end;
 
-	error = 0;
+	error = 1;
 end:
 	if (msg)
 		racoon_free(msg);
@@ -460,6 +460,9 @@ pfkey_reload()
 			ipsec_strerror());
 		return -1;
 	}
+
+	while (pfkey_handler() > 0)
+		continue;
 
 	return 0;
 }
